--- a/public_html/ass/index.html
+++ b/public_html/ass/index.html
@@ -14,7 +14,8 @@
 
 <ul>
     <li>You can find the first Assigment:(Community) <a href="ass1/index.html">Here</a> <br><br></li>
-    <li>You can find the Second Assigment:(e-clothing web-store) <a href="assTwo/products.php">Here</a></li>
+    <li>You can find the Second Assigment:(e-clothing web-store) <a href="assTwo/products.php">Here</a><br><br></li>
+    <li>You can find the Third Assigment:(e-clothing styled web-store) <a href="ass3/products.php">Here</a></li>
 </ul>
 
 </body>
