--- a/public_html/index.html
+++ b/public_html/index.html
@@ -197,7 +197,7 @@
             <ul>
                 <li><a href="ass/index.html" target="_blank">Assignments</a></li>
                 <li><a href="examples/index.html" target="_blank">Course Examples</a></li>
-                <li><a href="project/index.html" target="_blank">Projects</a></li>
+                <li><a href="web_project/index.html" target="_blank">Projects</a></li>
             </ul>
         </nav>
     </section>
